Issue 30715:  - Added overflow ellipses class to antigen description.  - Gave the label/description column more flex to better reflect spec image.

--- a/app/Connector/packages/connector-theme/sass/var/view/_Learn.scss
+++ b/app/Connector/packages/connector-theme/sass/var/view/_Learn.scss
@@ -769,8 +769,7 @@ img.detail-has-data-small {
     }
   }
   .antigen-description {
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding: 12px 12px 12px 0;
     color: $heat-scale-1;
     font: $body-one-font;
   }
